syntax = "proto3";

package greet.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/sisisin-sandbox/try-connect-go/gen/greet/v1;greetv1";

message GreetRequest {
  string name = 1 [ (buf.validate.field).string.min_len = 1 ];
}

message GreetResponse { string greeting = 1; }

service GreetService {
  rpc Greet(GreetRequest) returns (GreetResponse) {}
  rpc GreetError(GreetRequest) returns (GreetResponse) {}
}
